# borescope

./: EXPERIMENT_PLAN.md  MECHINTERP_LEARNING_PLAN.md  README.md
eiffel-tower-llama/: .gitignore  README.md  pyproject.toml
eiffel-tower-llama/data/: alpaca_eval_prompts.json  alpaca_train_prompts.json  create_datasets.py  simple_prompts.json
eiffel-tower-llama/experiments/: EXPERIMENTS.md  PLAN.md  analysis.ipynb  quick_test.yaml  run_experiments.sh
eiffel-tower-llama/experiments/exp01_baseline_sweep/: config.yaml
eiffel-tower-llama/experiments/exp02_clamping_comparison/: clamp_false.yaml  clamp_true.yaml
eiffel-tower-llama/experiments/exp03_multi_feature/: config.yaml
eiffel-tower-llama/experiments/exp04_generation_params/: config_baseline.yaml  config_improved.yaml
eiffel-tower-llama/experiments/exp05_different_concepts/: README.md  golden_gate.yaml
eiffel-tower-llama/scripts/: compute_mean_activations.py
eiffel-tower-llama/scripts/evaluation/: evaluation.py  evaluation.yaml  evaluation_analysis.py
eiffel-tower-llama/scripts/optimize/: optimize_botorch.py  optimize_botorch.yaml  optimize_descent.py  optimize_descent.yaml
eiffel-tower-llama/scripts/sweep_1D/: sweep_1D.py  sweep_1D.yaml  sweep_1D_analysis.py
eiffel-tower-llama/src/: optimize.py  print_utils.py  steering.py
experiments/superposition/: SAEdataviz-carousel.html  SAEdataviz.html  toy_models_local.py
mechinterp/: ablation_results.txt  exp10_linear_probe.py  exp11_layer_sweep.py  exp12_sae_training.py  requirements.txt
mechinterp/outputs/: detection_results.json
