[project]
name = "eiffel-steering"
version = "0.1.0"
description = "Steering a large language model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "sae-lens>=6.12.3",
    "transformers>=4.56.2",
    "nnsight>=0.5.5",
    "datasets>=4.1.1",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "botorch>=0.15.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"